<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.Activitys.GuideActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="숨케어 첫 사용 가이드"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/notosanscjkkr_medium"
            android:includeFontPadding="false"/>
        <ImageView
            android:id="@+id/img_guide_close"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:src="@drawable/ic_close_black_24dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="26dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="26dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="3dp"
                        android:text="숨케어에 처음오셨군요!\n환영합니다."/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_bold"
                        android:textSize="16dp"
                        android:textColor="#00ce60"
                        android:text="숨케어는 만성 호흡기질환관리 서비스입니다." />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium_regular"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="10dp"
                        android:text="✅ 질환에 대한 정보를 이해하고\n✅ 스스로 관리하는 습관을 만들며\n✅ 응원하며 함께! 꾸준히! 관리합니다" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_bold"
                        android:textSize="16dp"
                        android:textColor="@color/color00ce60"
                        android:text="함께하면 달라지는 이유"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="9dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="1️⃣ 기록으로 만드는 큰 변화"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="9dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium_regular"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="9dp"
                        android:text="@string/guide_first_contents"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="2️⃣ 상태 요약 보고서"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="9dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium_regular"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="9dp"
                        android:text="@string/guide_second_contents"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="3️⃣ 맞춤형 보고서"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="9dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium_regular"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="9dp"
                        android:text="@string/guide_third_contents"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="4️⃣ 함께 건강해지는 커뮤니티!"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="9dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanscjkkr_medium_regular"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="9dp"
                        android:text="@string/guide_four_contents"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_guide_move"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:textSize="18dp"
            android:text="검사로 상태 알아보기"
            android:textColor="@color/white"
            android:fontFamily="@font/notosanscjkkr_medium"
            android:includeFontPadding="false"
            android:background="@drawable/ic_radius_btn_bg"/>
    </RelativeLayout>
</LinearLayout>